// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Page: Message Events tests getRowData renders correctly 1`] = `
Array [
  <DisplayDate
    formattedDate="formatted"
    timestamp={undefined}
  />,
  "Injection",
  "tom.haverford@pawnee.state.in.us",
  "mean@friendly",
  <ViewDetailsButton
    event_id="456xyz"
    formattedDate="formatted"
    friendly_from="mean@friendly"
    message_id="123abc"
    rcpt_to="tom.haverford@pawnee.state.in.us"
    type="injection"
  />,
]
`;

exports[`Page: Message Events tests renders banner correctly with too many (1000) records 1`] = `
<Banner
  status="info"
  title="Note: A maximum of 1,000 results displayed"
>
  SparkPost retains message event data for 10 days.
</Banner>
`;

exports[`Page: Message Events tests should only render loading component while loading 1`] = `
<Page
  empty={Object {}}
  title="Message Events"
>
  <Connect(MessageEventsSearch) />
  <PanelLoading
    minHeight="400px"
  />
</Page>
`;

exports[`Page: Message Events tests should render error when action fails 1`] = `
<Page
  empty={Object {}}
  title="Message Events"
>
  <Connect(MessageEventsSearch) />
  <ApiErrorBanner
    errorDetails="You done f'ed up now"
    message="Sorry, we seem to have had some trouble loading your message events."
    reload={[Function]}
  />
</Page>
`;

exports[`Page: Message Events tests should render page correctly 1`] = `
<Page
  empty={Object {}}
  title="Message Events"
>
  <Connect(MessageEventsSearch) />
  <div>
    <TableCollection
      columns={
        Array [
          Object {
            "label": "Time",
            "sortKey": "timestamp",
          },
          Object {
            "label": "Event",
            "sortKey": "type",
          },
          Object {
            "label": "Recipient",
            "sortKey": "rcpt_to",
          },
          Object {
            "label": "Friendly From",
            "sortKey": "friendly_from",
          },
          null,
        ]
      }
      defaultSortColumn="timestamp"
      defaultSortDirection="desc"
      getRowData={[Function]}
      pagination={true}
      rows={
        Array [
          Object {
            "formattedDate": "so-formatted",
            "friendly_from": "hi@friendly",
            "rcpt_to": "ron.swanson@pawnee.state.in.us",
            "type": "delivery",
          },
          Object {
            "formattedDate": "formatted",
            "friendly_from": "mean@friendly",
            "rcpt_to": "tom.haverford@pawnee.state.in.us",
            "type": "injection",
          },
        ]
      }
    />
  </div>
</Page>
`;

exports[`Page: Message Events tests should render the empty message when 0 results are returned 1`] = `
<Page
  empty={Object {}}
  title="Message Events"
>
  <Connect(MessageEventsSearch) />
  <Empty
    message="There are no message events for your current query"
  />
</Page>
`;
